--- a/locale/en/ulocale.en.babelfish.cfg
+++ b/locale/en/ulocale.en.babelfish.cfg
@@ -4,9 +4,9 @@
 er:babelfish-network-rate=Babelfish Network Usage (KiB/s) [img=info] [img=developer]
 
 [mod-setting-description]
-er:babelfish-network-rate=[img=developer][color=blue] This is an advanced setting. Be careful when changing it.[/color]\n[img=info] [color=orange]Default Value:[/color] [color=acid]8[/color]\n\nApproximately how much network bandwidth Babelfish will use while translating. Has no effect in Singleplayer. No bandwidth is used once translation is done. \n\nWhile Babelfish is working you can hover the small icon in the upper right corner to see more detailed status info. \n\nIf a player has slow internet AND uses a language that is not yet translated on the server, then they might be dropped or unable to join a server if this setting is too high. In that case temporarily lower the setting until translation is done. 
+er:babelfish-network-rate=[img=developer][color=blue] This is an advanced setting. Be careful when changing it.[/color]\n[img=info] [color=orange]Default Value:[/color] [color=acid]8[/color]\n\nRough approximately how much network bandwidth Babelfish will use while translating. Has no effect in Singleplayer. No bandwidth is used once translation is done. \n\nWhile Babelfish is working you can hover the small icon in the upper right corner to see more detailed status info. \n\nIf a player has slow internet AND uses a language that is not yet translated on the server, then they might be dropped or unable to join a server if this setting is too high. In that case temporarily lower the setting until translation is done. 
 
 [babelfish]
-translation-progress=Translation is currently __1__% done.
+status-indicator-tooltip-header=The Babelfish is currently translating your mods.__1__
 language_code=en
 native_language_name=English
