--- a/locale/en/ulocale.en.babelfish.cfg
+++ b/locale/en/ulocale.en.babelfish.cfg
@@ -27,3 +27,9 @@ command-confirm=Ok!
 test-string=This is a test. Button: __CONTROL__mine__. Complex Button: __ALT_CONTROL__1__build__Parameters: __2__ __3__. Item Name: __ITEM__iron-plate__. Plural: __4__ __plural_for_parameter_4_{1=day|rest=days}__
 language_code=en
 native_language_name=English
+
+[tips-and-tricks-item-name]
+er:babelfish-tip-1=Babelfish
+
+[tips-and-tricks-item-description]
+er:babelfish-tip-1=Babelfish helps mods to interact with you in your\nown language. You will see a small indicator in the upper\nright corner of the screen when it is working.\n\n\nMods known to use Babelfish:\n   Eradicator's Belt Builder (by eradicator)\n   Factory Planner (by Therenas) (soon™)
