unified plugin loading with loader.lua

--- a/locale/en/ulocale.en.babelfish.cfg
+++ b/locale/en/ulocale.en.babelfish.cfg
@@ -3,6 +3,7 @@
 [mod-setting-name]
 er:babelfish-network-rate=Babelfish: Maximum Network Usage (KiB/s) [img=info] [img=developer]
 er:babelfish-string-match-type=Babelfish: Search Mode [img=info]
+er:babelfish-search-types=[Hidden] Babelfish: Search Types 
 
 [string-mod-setting]
 er:babelfish-string-match-type-plain=Default [img=info]
