--- a/locale/en/ulocale.en.babelfish.cfg
+++ b/locale/en/ulocale.en.babelfish.cfg
@@ -16,11 +16,12 @@ er:babelfish-string-match-type-fuzzy=Searches for each letter seperately. Same a
 er:babelfish-string-match-type-lua=[img=developer][color=blue] This is an advanced setting. Be careful when changing it.[/color]\n\nRaw lua pattern input. Not RegEx.\nFor hoopy froods who know where their towel is.
 
 [mod-setting-description]
-er:babelfish-network-rate=[img=developer][color=blue] This is an advanced setting. Be careful when changing it.[/color]\n[color=orange]Default Value:[/color] [color=acid]32[/color]\n\nRough approximation of how much network bandwidth Babelfish will use while translating. Has no effect in Singleplayer. No bandwidth is used once translation is done. \n\nWhile Babelfish is working you can hover the small icon in the upper right corner to see more detailed status info. \n\nIf a player has slow internet AND uses a language that is not yet translated on the server, then they might be dropped or unable to join a server if this setting is too high. In that case temporarily lower the setting until translation is done. 
+er:babelfish-network-rate=[img=developer][color=blue] This is an advanced setting. Be careful when changing it.[/color]\n[color=orange]Default Value:[/color] [color=acid]64[/color]\n\nRough approximation of how much network bandwidth Babelfish will use while translating. Has no effect in Singleplayer. No bandwidth is used once translation is done. \n\nWhile Babelfish is working you can hover the small icon in the upper right corner to see more detailed status info. \n\nIf a player has slow internet AND uses a language that is not yet translated on the server, then they might be dropped or unable to join a server if this setting is too high. In that case temporarily lower the setting until translation is done. 
 er:babelfish-string-match-type=[color=orange]Default Value:[/color] [color=acid]Default[/color]\n\nChanges how text you enter into the search fields of supported mods is treated. All search modes are case-insensitive.
 
 [babelfish]
-status-indicator-tooltip-header=The Babelfish is currently translating your mods.__1__
+babelfish=Babelfish
+translation-in-progress=The Babelfish is currently translating your mods.
 command-only-in-singleplayer=This command can only be used in singleplayer.
 command-only-by-admin=This command can only be used by admins.
 unknown-command=Unknown command.
@@ -29,8 +30,5 @@ test-string=This is a test. Button: __CONTROL__mine__. Complex Button: __ALT_CON
 language_code=en
 native_language_name=English
 
-[tips-and-tricks-item-name]
-er:babelfish-tip-1=Babelfish
-
 [tips-and-tricks-item-description]
-er:babelfish-tip-1=Babelfish helps mods to interact with you in your\nown language. You will see a small indicator in the upper\nright corner of the screen when it is working.\n\n\nMods known to use Babelfish:\n   Eradicator's Belt Builder (by eradicator)\n   Factory Planner (by Therenas) (soon™)
+er:babelfish-tip-1=Babelfish helps mods to interact with you in your\nown language. You will see a small indicator in the upper\nright corner of the screen while it is working.\n\n\nMods known to use Babelfish:\n   Eradicator's Belt Builder (by eradicator)\n   Factory Planner (by Therenas) (soon™)
