babelfish support for all prototype tables

--- a/locale/en/ulocale.en.babelfish.cfg
+++ b/locale/en/ulocale.en.babelfish.cfg
@@ -4,6 +4,7 @@
 er:babelfish-network-rate=Babelfish: Maximum Network Usage (KiB/s) [img=info] [img=developer]
 er:babelfish-string-match-type=Babelfish: Search Mode [img=info]
 er:babelfish-search-types=[Hidden] Babelfish: Search Types 
+er:babelfish-singleplayer-instant-translation=[Hidden] Babelfish: Singleplayer Instant Translation 
 
 [string-mod-setting]
 er:babelfish-string-match-type-plain=Default [img=info]
