--- a/locale/de/ulocale.de.babelfish.cfg
+++ b/locale/de/ulocale.de.babelfish.cfg
@@ -3,7 +3,7 @@
 ;If you want to submit a new language please do so as a .cfg file. Directly posting translated text on the forum or modportal ruins the formatting and makes your work unusable.
 
 [mod-setting-name]
-er:babelfish-network-rate=Babelfisch: Maximaler Datenverbrauch (KiB/s) [img=ul:info-default][img=ul:info-purple][img=info][img=developer]
+er:babelfish-network-rate=Babelfisch: Maximale Uploadrate (KiB/s) [img=ul:info-default][img=ul:info-purple][img=info][img=developer]
 
 [mod-setting-description]
 er:babelfish-network-rate=[img=ul:info-default][color=orange] Standardwert:[/color] [color=acid]64[/color]\n[img=ul:info-purple][color=purple] Mehrspielereinstellung. Hat keinen Effekt im Einzelspieler.[/color]\n[img=developer][color=blue] Dies ist eine Power-User Einstellung. Vorsicht beim Ändern.[/color]\n\nGrobe Schätzung des Datenverbrauchs während der Übersetzung.
