--- a/locale/en/ulocale.en.babelfish.cfg
+++ b/locale/en/ulocale.en.babelfish.cfg
@@ -5,9 +5,9 @@
 [mod-setting-name]
 er:babelfish-network-rate=Babelfish: Maximum Upload Speed (KiB/s) [img=ul:info-default][img=ul:info-purple][img=info][img=developer]
 er:babelfish-singleplayer-instant-translation=Babelfish: Singleplayer Instant Translation  [img=ul:info-default][img=ul:info-pink]
-er:babelfish-enable-packaging=Babelfish: Enable Packaging [img=ul:info-default][img=ul:info-purple][img=info][img=developer]
+er:babelfish-enable-packaging=Babelfish: Use large packets [img=ul:info-default][img=ul:info-purple][img=info][img=developer]
 er:babelfish-string-match-type=Babelfish: Search Mode [img=ul:info-default][img=info]
-er:babelfish-search-types=[Hidden] Babelfish: Search Types  [img=ul:info-default]
+er:babelfish-search-types=Babelfish: Search Types [img=ul:info-default][img=ul:info-pink]
 
 [string-mod-setting]
 er:babelfish-string-match-type-plain=Default [img=info]
@@ -20,11 +20,11 @@ er:babelfish-string-match-type-fuzzy=Searches for each letter seperately. Same a
 er:babelfish-string-match-type-lua=[img=developer][color=blue] This is an advanced setting. Be careful when changing it.[/color]\n\nRaw lua pattern input. Not RegEx.\nFor hoopy froods who know where their towel is.
 
 [mod-setting-description]
-er:babelfish-network-rate=[img=ul:info-default][color=orange] Default Value:[/color] [color=acid]64[/color]\n[img=ul:info-purple][color=purple] Multiplayer-only setting. Has no effect in Singleplayer.[/color]\n[img=developer][color=blue] This is an advanced setting. Be careful when changing it.[/color]\n\nRough approximation of how much network bandwidth Babelfish will use while translating. No bandwidth is used once translation is done. \n\nWhile Babelfish is working you can hover the small icon in the upper right corner to see more detailed status info. \n\nIf a player has slow internet AND uses a language that is not yet translated on the server, then they might be dropped or unable to join a server if this setting is too high. In that case temporarily lower the setting until translation is done. 
-er:babelfish-enable-packaging=[img=ul:info-default][color=orange] Default Value:[/color] [color=acid]☑[/color]\n[img=ul:info-purple][color=purple] Multiplayer-only setting. Has no effect in Singleplayer.[/color]\n[img=developer][color=blue] This is an advanced setting. Be careful when changing it.[/color]\n\nPackaging can reduce network overhead and cpu usage in some cases.
+er:babelfish-network-rate=[img=ul:info-default][color=orange] Default Value:[/color] [color=acid]64[/color]\n[img=ul:info-purple][color=purple] Multiplayer-only setting. Has no effect in Singleplayer.[/color]\n[img=developer][color=blue] This is an advanced setting. Be careful when changing it.[/color]\n\nRough approximation of how much network bandwidth Babelfish will use while translating. No bandwidth is used once translation is done. \n\nWhile Babelfish is working you can hover the small icon in the upper right corner to see more detailed status info. \n\nIf a player has slow internet AND uses a language that is not yet translated on the server, then they might be dropped or unable to join a server if this setting is too high. In that case temporarily lower the setting until translation is done.
+er:babelfish-enable-packaging=[img=ul:info-default][color=orange] Default Value:[/color] [color=acid]☑[/color]\n[img=ul:info-purple][color=purple] Multiplayer-only setting. Has no effect in Singleplayer.[/color]\n[img=developer][color=blue] This is an advanced setting. Be careful when changing it.[/color]\n\nInstead of sending each translation request seperately, Babelfish will bundle them together. Slightly reduces cpu and bandwidth cost, but may sometimes use slightly more than the maximum upload speed.
 er:babelfish-string-match-type=[img=ul:info-default][color=orange] Default Value:[/color] [color=acid]Default[/color]\n\nChanges how text you enter into the search fields of supported mods is treated. All search modes are case-insensitive.
-er:babelfish-singleplayer-instant-translation=[img=ul:info-pink][color=pink] Dev-Mode-only setting. Is hidden to normal players.[/color]\n\n[img=ul:info-default][color=orange] Default Value:[/color] [color=acid]☑[/color]
-er:babelfish-search-types=[img=ul:info-default][color=orange] Default Value:[/color] [color=acid]item_name[/color]
+er:babelfish-singleplayer-instant-translation=[img=ul:info-default][color=orange] Default Value:[/color] [color=acid]☑[/color]\n[img=ul:info-pink][color=pink] Dev-Mode-only setting. Is hidden to normal players.[/color]
+er:babelfish-search-types=[img=ul:info-default][color=orange] Default Value:[/color] [color=acid]item_name[/color]\n[img=ul:info-pink][color=pink] Dev-Mode-only setting. Is hidden to normal players.[/color]
 
 [babelfish]
 babelfish=Babelfish
@@ -34,7 +34,7 @@ command-only-by-admin=This command can only be used by admins.
 unknown-command=Unknown command.
 command-confirm=Ok!
 test-string=This is a test. Button: __CONTROL__mine__. Complex Button: __ALT_CONTROL__1__build__Parameters: __2__ __3__. Item Name: __ITEM__iron-plate__. Plural: __4__ __plural_for_parameter_4_{1=day|rest=days}__
-language_code=en
+language_code=e
 native_language_name=English
 
 [tips-and-tricks-item-description]
