Log.Logger mod settings (prototype) + Babelfish earlier sp-instant mode

--- a/locale/de/ulocale.de.interact-button.cfg
+++ b/locale/de/ulocale.de.interact-button.cfg
@@ -3,7 +3,7 @@
 ;If you want to submit a new language please do so as a .cfg file. Directly posting translated text on the forum or modportal ruins the formatting and makes your work unusable.
 
 [controls]
-er:interact=Mit Object interagiere
+er:interact=Mit Object interagieren
 
 [controls-description]
 er:interact=Ein unspetifischer dritter Interactionsknopf für Mods.
