--- a/locale/ja/ulocale.ja.babelfish.cfg
+++ b/locale/ja/ulocale.ja.babelfish.cfg
@@ -3,10 +3,10 @@
 ;If you want to submit a new language please do so as a .cfg file. Directly posting translated text on the forum or modportal ruins the formatting and makes your work unusable.
 
 [mod-setting-name]
-er:babelfish-network-rate=バベルフィッシュさん: 最大アップロード速度 (KiB/秒) [img=ul:info-default][img=ul:info-purple][img=info][img=developer]
+er:babelfish-network-rate=バベルフィッシュさん: 最大アップロード速度 (KiB/秒) [img=ul:info-default][img=ul:info-purple][img=ul:info-white][img=developer]
 
 [mod-setting-description]
-er:babelfish-network-rate=[img=ul:info-default][color=orange] デフォルト値→[/color] [color=acid]64[/color]\n[img=ul:info-purple][color=purple] マルチプレイ専用設定。\n    シングルプレイに影響はありません。[/color]\n[img=developer][color=blue] こちらはヘビーユーザー専用の設定です。\n    変更時はご注意ください。[/color]\n\n翻訳中に使用される大よその回線帯域。
+er:babelfish-network-rate=[img=ul:info-default][color=orange] デフォルト値→[/color] [color=acid]64[/color]\n[img=ul:info-purple][color=purple] ネットワーク設定。\n    シングルプレイに影響はありません。[/color]\n[img=developer][color=blue] こちらはヘビーユーザー専用の設定です。\n    変更時はご注意ください。[/color]\n\n翻訳中に使用される大よその回線帯域。
 
 [babelfish]
 babelfish=バベルフィッシュさん
