babelfish full translation de, en, ja

--- a/locale/de/ulocale.de.babelfish.cfg
+++ b/locale/de/ulocale.de.babelfish.cfg
@@ -3,13 +3,32 @@
 ;If you want to submit a new language please do so as a .cfg file. Directly posting translated text on the forum or modportal ruins the formatting and makes your work unusable.
 
 [mod-setting-name]
-er:babelfish-network-rate=Babelfisch: Maximale Uploadrate (KiB/s) [img=ul:info-default][img=ul:info-purple][img=ul:info-white][img=developer]
+er:babelfish-network-rate=Babelfisch: Maximale Uploadgeschwindigkeit (KiB/s) [img=ul:info-default][img=ul:info-purple][img=ul:info-white][img=developer]
+er:babelfish-string-match-type=Babelfisch: Suchmodus [img=ul:info-default][img=ul:info-white]
+
+[string-mod-setting]
+er:babelfish-string-match-type-plain=Standard [img=ul:info-white]
+er:babelfish-string-match-type-fuzzy=Unscharf [img=ul:info-white]
+er:babelfish-string-match-type-lua=Lua Zeichenkettenmuster [img=ul:info-white][img=developer]
+
+[string-mod-setting-description]
+er:babelfish-string-match-type-plain=Klartextsuche wie im Hauptspiel.
+er:babelfish-string-match-type-fuzzy=Sucht jeden Buchstaben einzeln. Funktioniert wie Factorios Benutzeroberflächeneinstellung "Unscharfe Suche".
+er:babelfish-string-match-type-lua=[img=developer][color=blue] Dies ist eine Power-User Einstellung. Vorsicht beim Ändern.[/color]\n\nDirekte Eingabe von Lua Zeichenkettenmustern. Nicht RegEx.\nFür hoopy Froods die wirklich wissen wo Ihr Handtuch ist.
 
 [mod-setting-description]
-er:babelfish-network-rate=[img=ul:info-default][color=orange] Standardwert:[/color] [color=acid]64[/color]\n[img=ul:info-purple][color=purple] Netzwerkeinstellung. Hat keinen Effekt im Einzelspieler.[/color]\n[img=developer][color=blue] Dies ist eine Power-User Einstellung. Vorsicht beim Ändern.[/color]\n\nGrobe Schätzung des Datenverbrauchs während der Übersetzung.
+er:babelfish-network-rate=[img=ul:info-default][color=orange] Standardwert:[/color] [color=acid]64[/color]\n[img=ul:info-purple][color=purple] Netzwerkeinstellung. Hat keinen Effekt im Einzelspieler.[/color]\n[img=developer][color=blue] Dies ist eine Power-User Einstellung. Vorsicht beim Ändern.[/color]\n\nEin hoher Wert beschleunigt die Übersetzung, aber kann zu Verbindungsproblemen bei Spielern mit langsamem Internet führen.\n\nWährend Babelfisch übersetzt erscheint in der oberen rechten Ecke deines Bildschirms ein [img=er:babelfish-icon-default] Symbol. Wenn du mit der Maus darüberfährst werden weitere Informationen eingeblendet. \n\nNach Fertigstellung der Übersetzung wird keine weitere Bandbreite verbraucht.
+er:babelfish-string-match-type=[img=ul:info-default][color=orange] Standardwert:[/color] [color=acid]Standard[/color]\n\nWie eingegebene Suchworte von unterstützen Mods verarbeitet werden. Alle Eingaben sind Klein- und Großschreibungsunabhängig.
 
 [babelfish]
 babelfish=Babelfisch
 translation-in-progress=Der Babelfisch übersetzt gerade deine Mods.
+command-only-in-singleplayer=Dieser Befehl funktioniert nur im Einzelspielermodus.
+command-only-by-admin=Dieser Befehl kann nur von Administratoren benutzt werden.
+unknown-command=Unbekannter Befehl.
+command-confirm=Ok!
 language_code=de
 native_language_name=Deutsch
+
+[tips-and-tricks-item-description]
+er:babelfish-tip-1=Babelfisch erlaubt es Mods in deiner eigenen Sprache mit dir zu interagieren. Während Babelfisch übersetzt erscheint in der oberen rechten Ecke deines Bildschirms ein [img=er:babelfish-icon-default] Symbol. Wenn du mit der Maus darüberfährst werden weitere Informationen eingeblendet. \n\nMods die offiziell Babelfish unterstützen:\n   Factory Planner (by Therenas) (soon™)
