--- a/locale/ja/ulocale.ja.babelfish.cfg
+++ b/locale/ja/ulocale.ja.babelfish.cfg
@@ -3,13 +3,29 @@
 ;If you want to submit a new language please do so as a .cfg file. Directly posting translated text on the forum or modportal ruins the formatting and makes your work unusable.
 
 [mod-setting-name]
-er:babelfish-network-rate=バベルフィッシュさん: 最大アップロード速度 (KiB/秒) [img=ul:info-default][img=ul:info-purple][img=ul:info-white][img=developer]
+er:babelfish-network-rate=バベルフィッシュ： 最大アップロード速度 （ＫｉＢ／秒） [img=ul:info-default][img=ul:info-purple][img=ul:info-white][img=developer]
+er:babelfish-string-match-type=バベルフィッシュ：: 検索モード [img=ul:info-default][img=ul:info-white]
+
+[string-mod-setting]
+er:babelfish-string-match-type-plain=デフォルト [img=ul:info-white]
+er:babelfish-string-match-type-lua=Lua パターン [img=ul:info-white][img=developer]
+
+[string-mod-setting-description]
+er:babelfish-string-match-type-plain=本編と同じ普通の検索です。
+er:babelfish-string-match-type-fuzzy=一文字ずつ検索します。 本編のインターフェース設定「あいまい検索」と同じです。
+er:babelfish-string-match-type-lua=[img=developer][color=blue] こちらはヘビーユーザー専用の設定です。\n    変更時はご注意ください。[/color]\n\nＬＵＡパターン直入力。正規表現にあらず。\n自分のタオルの在りかがちゃんと解かっているフーピイなフルードの為の設定です。
 
 [mod-setting-description]
-er:babelfish-network-rate=[img=ul:info-default][color=orange] デフォルト値→[/color] [color=acid]64[/color]\n[img=ul:info-purple][color=purple] ネットワーク設定。\n    シングルプレイに影響はありません。[/color]\n[img=developer][color=blue] こちらはヘビーユーザー専用の設定です。\n    変更時はご注意ください。[/color]\n\n翻訳中に使用される大よその回線帯域。
+er:babelfish-network-rate=[img=ul:info-default][color=orange] デフォルト値→[/color] [color=acid]64[/color]\n[img=ul:info-purple][color=purple] ネットワーク設定。\n    シングルプレイに影響はありません。[/color]\n[img=developer][color=blue] こちらはヘビーユーザー専用の設定です。\n    変更時はご注意ください。[/color]\n\n設定が高いほど翻訳速度も上がりますが、高すぎれば回線の遅いプレイヤーが接続困難になる場合があります。\n\n[img=er:babelfish-icon-default]翻訳中は画面の右上にこのアイコンが現れます。マウスで触れると進行情況が表示されます。\n\n翻訳終了後は回線を使用しません。
+er:babelfish-string-match-type=[img=ul:info-default][color=orange] デフォルト値→[/color] [color=acid]デフォルト[/color]\n\n対応モッドにて入力した文字列の処理方法です。入力されたローマ字の小・大文字に意味の違いはありませんが、現在平仮名と片仮名は別文字扱いになっています。
 
 [babelfish]
-babelfish=バベルフィッシュさん
+babelfish=バベルフィッシュ
 translation-in-progress=バベルフィッシュさんが只今モッドの翻訳に勤しんでいます。
+command-only-in-singleplayer=そのコマンドはシングルプレイ専用です。
+command-confirm=了解！
 language_code=ja
 native_language_name=日本語
+
+[tips-and-tricks-item-description]
+er:babelfish-tip-1=バベルフィッシュはモッドにもプレイヤー言語での検索を可能にします。[img=er:babelfish-icon-default]翻訳中は画面の右上にこのアイコンが現れます。マウスで触れると進行情況が表示されます。\n\n現在公式にバベルフィッシュに対応しているモッド：\n   Factory Planner (by Therenas) (soon™)
