Player.try_swap_character prototype

--- a/locale/en/ulocale.en.erlib-plugin-init.cfg
+++ b/locale/en/ulocale.en.erlib-plugin-init.cfg
@@ -6,4 +6,4 @@
 erlib:enabled-plugins=Enabled Plugins [img=ul:info-default][img=ul:info-pink]
 
 [mod-setting-description]
-erlib:enabled-plugins=[img=ul:info-default][color=orange] Default Value:[/color] [color=acid]on_ticked_action|on_player_changed_chunk|on_user_panic|on_entity_created|gui-auto-styler|babelfish-demo|babelfish[/color]\n[img=ul:info-pink][color=pink] Dev-Mode-only setting. Is hidden to normal players.[/color]
+erlib:enabled-plugins=[img=ul:info-default][color=orange] Default Value:[/color] [color=acid]on_user_panic|on_ticked_action|on_player_changed_chunk|on_entity_created|gui-auto-styler|babelfish-demo|babelfish[/color]\n[img=ul:info-pink][color=pink] Dev-Mode-only setting. Is hidden to normal players.[/color]
